{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 5,
  "lineage": "71cdf460-1bc1-b817-f091-adb324dd14c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic from Internet to ALB",
            "from_port": 80,
            "id": "sgrule-2356300948",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02bcd12296de567e2",
            "security_group_rule_id": "sgr-0d62ea4bd1ecc0248",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.asg",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPs traffic from Internet to ALB",
            "from_port": 443,
            "id": "sgrule-3429149733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02bcd12296de567e2",
            "security_group_rule_id": "sgr-09927883b3fca36fb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.asg",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS inbound traffic from the internet to the control plane",
            "from_port": 443,
            "id": "sgrule-1569716925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d9ea4cb1c7a86b70",
            "security_group_rule_id": "sgr-0e5cade456b97ffe9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.control_plane.aws_security_group.asg",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH traffic from Internet to Bastion host",
            "from_port": 22,
            "id": "sgrule-1431412346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-03f193f18c55b47b5",
            "security_group_rule_id": "sgr-024f8c34e98fe27e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.asg",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:security-group/sg-02bcd12296de567e2",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bcd12296de567e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from Internet to ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPs traffic from Internet to ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-eks-alb-sg",
            "name_prefix": "",
            "owner_id": "522814728660",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-alb-sg",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-alb-sg",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:security-group/sg-03f193f18c55b47b5",
            "description": "Security group for the bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f193f18c55b47b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic from Internet to Bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-eks-bastion-sg",
            "name_prefix": "",
            "owner_id": "522814728660",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-bastion-sg",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-bastion-sg",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.control_plane",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:security-group/sg-0d9ea4cb1c7a86b70",
            "description": "Security group for the control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9ea4cb1c7a86b70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS inbound traffic from the internet to the control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-eks-control-plane-sg",
            "name_prefix": "",
            "owner_id": "522814728660",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-control-plane-sg",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-control-plane-sg",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:internet-gateway/igw-0cdabba2badf9eed8",
            "id": "igw-0cdabba2badf9eed8",
            "owner_id": "522814728660",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "db_nat_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cdabba2badf9eed8",
            "id": "r-rtb-013569791bb2463c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-013569791bb2463c1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_internet_gateway.gw",
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:route-table/rtb-031f6939ca429f5e4",
            "id": "rtb-031f6939ca429f5e4",
            "owner_id": "522814728660",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-db",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-db",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:route-table/rtb-07229220de93f9882",
            "id": "rtb-07229220de93f9882",
            "owner_id": "522814728660",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-private",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-private",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:route-table/rtb-013569791bb2463c1",
            "id": "rtb-013569791bb2463c1",
            "owner_id": "522814728660",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdabba2badf9eed8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-public",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-public",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085f24fcc2399c84f",
            "region": "ap-south-1",
            "route_table_id": "rtb-031f6939ca429f5e4",
            "subnet_id": "subnet-06e1e5556f74d4fb9"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.db",
            "module.eks_vpc.aws_subnet.db",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052bb90fbd5f8796e",
            "region": "ap-south-1",
            "route_table_id": "rtb-031f6939ca429f5e4",
            "subnet_id": "subnet-00e1daf70321e2d4b"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.db",
            "module.eks_vpc.aws_subnet.db",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6b8b7b2c16e72ea",
            "region": "ap-south-1",
            "route_table_id": "rtb-07229220de93f9882",
            "subnet_id": "subnet-0ea246bc6ed3c1a93"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031572e2e1aba3cab",
            "region": "ap-south-1",
            "route_table_id": "rtb-07229220de93f9882",
            "subnet_id": "subnet-0f9c9fb51723cda16"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.private",
            "module.eks_vpc.aws_subnet.private",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0892c98dff3b68f5c",
            "region": "ap-south-1",
            "route_table_id": "rtb-013569791bb2463c1",
            "subnet_id": "subnet-00d301a7ac421be92"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea36afa80e3a330",
            "region": "ap-south-1",
            "route_table_id": "rtb-013569791bb2463c1",
            "subnet_id": "subnet-0b9f0b57e1819a779"
          },
          "dependencies": [
            "module.eks_vpc.aws_route_table.public",
            "module.eks_vpc.aws_subnet.public",
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:subnet/subnet-06e1e5556f74d4fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e1e5556f74d4fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-db-subnet-1a",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-db-subnet-1a",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:subnet/subnet-00e1daf70321e2d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e1daf70321e2d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-db-subnet-1b",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-db-subnet-1b",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:subnet/subnet-0ea246bc6ed3c1a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea246bc6ed3c1a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-private-subnet-1a",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-private-subnet-1a",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:subnet/subnet-0f9c9fb51723cda16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9c9fb51723cda16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-private-subnet-1b",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-private-subnet-1b",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:subnet/subnet-00d301a7ac421be92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.17.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d301a7ac421be92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-public-subnet-1a",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "karpenter.sh/discovery": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-public-subnet-1a",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "karpenter.sh/discovery": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:subnet/subnet-0b9f0b57e1819a779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.17.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9f0b57e1819a779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522814728660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-public-subnet-1b",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "karpenter.sh/discovery": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks-public-subnet-1b",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "karpenter.sh/discovery": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bb1e1560e551b95c"
          },
          "dependencies": [
            "module.eks_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:522814728660:vpc/vpc-0bb1e1560e551b95c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-09a7725bb1de35b7b",
            "default_route_table_id": "rtb-0e051d0e11e9e71d7",
            "default_security_group_id": "sg-0c29dd7c79aed04eb",
            "dhcp_options_id": "dopt-0426ef828a5449718",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb1e1560e551b95c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e051d0e11e9e71d7",
            "owner_id": "522814728660",
            "region": "ap-south-1",
            "tags": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "karpenter.sh/discovery": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "owned"
            },
            "tags_all": {
              "Environment": "Dev",
              "ManagedBy": "Terraform",
              "Name": "dev-eks",
              "Owner": "Sivaramakrishna",
              "Project": "EKS-Cluster",
              "karpenter.sh/discovery": "dev-eks",
              "kubernetes.io/cluster/dev-eks": "owned"
            }
          }
        }
      ]
    }
  ]
}